--- a/css/jClocksGMT.css
+++ b/css/jClocksGMT.css
@@ -8,11 +8,14 @@
     font-size:10px;
     color: #333333;
     line-height: 22px;
-    background: url(../images/clock_label.png);
+    /*background: url(../images/clock_label.png);*/
+    background-color: white;
     text-align: center;
-    height: 27px;
+    height: auto;
     width: 108px;
     margin: 0 auto;
+    font-weight: bold;
+    text-transform: capitalize;
 }
 .clockHolder {
     width:100px; 
@@ -48,4 +51,10 @@
     font-size: 14px;
     color: #444444;
     text-align:center;
+}
+.user-clocks {
+    display:inline-block;    
+}
+.clocks-list {
+    list-style-type:none;
 }
